<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".presentation.ui.screens.SettingScreen">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/background_color"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:padding="4dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_back"
            android:tint="@color/textColor" />

        <TextView
            android:id="@+id/toolbarText"
            android:background="@color/background_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/setting"
            android:textColor="@color/textColor"
            android:textSize="20sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/change_mode"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="10dp"
        android:background="@color/background_color"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:background="@color/background_color"
            android:text="@string/darkmode"
            android:textColor="@color/textColor"
            android:textSize="18sp" />

        <Switch
            android:id="@+id/switchMode"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:background="@color/background_color"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/change_lang"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/change_mode"
        tools:layout_editor_absoluteX="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/background_color"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/language"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingEnd="20dp"
            android:text="@string/change_language"
            android:textColor="#E1000000"
            android:textSize="22sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/uzbek"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="10dp"
        android:background="@color/background_color"
        app:layout_constraintTop_toBottomOf="@+id/change_mode"
        tools:layout_editor_absoluteX="10dp">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:padding="8dp"
            android:src="@drawable/img_4" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingStart="10dp"

            android:background="@color/background_color"
            android:text="@string/uzbek"
            android:textColor="@color/textColor"
            android:textSize="18sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/english"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="10dp"
        android:background="@color/background_color"
        app:layout_constraintTop_toBottomOf="@+id/russian"
        tools:layout_editor_absoluteX="10dp">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:padding="8dp"
            android:src="@drawable/img_2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingStart="10dp"

            android:background="@color/background_color"
            android:text="@string/english"
            android:textColor="@color/textColor"
            android:textSize="18sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/russian"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="10dp"
        android:background="@color/background_color"
        app:layout_constraintTop_toBottomOf="@+id/uzbek"
        tools:layout_editor_absoluteX="10dp">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:padding="8dp"
            android:src="@drawable/img_3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingStart="10dp"

            android:background="@color/background_color"
            android:text="@string/russian"
            android:textColor="@color/textColor"
            android:textSize="18sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>